crates/compiler/tests/parse_errors/alias_name.elm
module Main exposing (..)
type alias = Int
